--- a/vue-grapes/package.json
+++ b/vue-grapes/package.json
@@ -15,9 +15,13 @@
     "grapesjs-cli": "^4.1.3",
     "grapesjs-component-countdown": "^1.0.2",
     "grapesjs-custom-code": "^1.0.2",
+    "grapesjs-indexeddb": "^1.0.5",
     "grapesjs-lory-slider": "^0.1.5",
+    "grapesjs-mjml": "^1.0.5",
     "grapesjs-navbar": "^1.0.2",
     "grapesjs-parser-postcss": "^1.0.3",
+    "grapesjs-plugin-export": "^1.0.12",
+    "grapesjs-plugin-forms": "^2.0.6",
     "grapesjs-preset-webpage": "^1.0.3",
     "grapesjs-style-bg": "^2.0.2",
     "grapesjs-tabs": "^1.0.6",
