--- a/vue-grapes/package.json
+++ b/vue-grapes/package.json
@@ -28,6 +28,7 @@
     "grapesjs-tooltip": "^0.1.8",
     "grapesjs-tui-image-editor": "^1.0.2",
     "pinia": "^2.1.7",
+    "swrv": "^1.0.4",
     "vue": "^3.4.29",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.4.0"
